# hkClient

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  backChannelClient.cpp  backChannelClient.h  backChannelMgr.cpp  backChannelMgr.h  groupActivityData.h  hkClient.cpp  hkClient.h  hkClientMgr.cpp  hkClientMgr.h  hkClientMgrExt.cpp  hkClientMgrExt.h  hkDevice.cpp  hkDevice.h  hkDeviceMgr.cpp  hkDeviceMgr.h  hkDeviceMgrI.h  hyperCubeClient.cpp  hyperCubeClient.h  hyperCubeConfigFile.json  msgDecoder.cpp  msgDecoder.h  publishActivityDataObject.h
backChannelClientLinux/: Makefile
backChannelClientWin/: backChannelClientWin.cpp  backChannelClientWin.h  backChannelClientWin.vcxproj.filters
hkClientLinux/: hkClientAppLinux.cpp
hkClientWin/: backChannelClientWin.vcxproj
tests/: CMakeLists.txt  test_groupActivityData.cpp
